syntax = "proto3";

package todo.v1;

import "google/api/annotations.proto";
import "todo/v1/auth.proto";

option go_package = "github.com/venslupro/todo-api/api/proto/todo;todo";
option java_multiple_files = true;
option java_package = "todo.v1";

// AuthService handles user authentication and registration.
service AuthService {
  // Register a new user account.
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/auth/register"
      body: "*"
    };
  }

  // Login with email and password.
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }

  // Logout the current user.
  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/v1/auth/logout"
      body: "*"
    };
  }

  // Refresh access token using refresh token.
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/v1/auth/refresh"
      body: "*"
    };
  }

  // Get current user profile.
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse) {
    option (google.api.http) = {get: "/v1/auth/profile"};
  }

  // Update user profile.
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {
    option (google.api.http) = {
      patch: "/v1/auth/profile"
      body: "*"
    };
  }

  // Change user password.
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {
    option (google.api.http) = {
      post: "/v1/auth/change-password"
      body: "*"
    };
  }

  // Verify email address.
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse) {
    option (google.api.http) = {
      post: "/v1/auth/verify-email"
      body: "*"
    };
  }

  // Request password reset.
  rpc RequestPasswordReset(RequestPasswordResetRequest) returns (RequestPasswordResetResponse) {
    option (google.api.http) = {
      post: "/v1/auth/request-password-reset"
      body: "*"
    };
  }

  // Confirm password reset.
  rpc ConfirmPasswordReset(ConfirmPasswordResetRequest) returns (ConfirmPasswordResetResponse) {
    option (google.api.http) = {
      post: "/v1/auth/confirm-password-reset"
      body: "*"
    };
  }
}
